testsuite/tests/explicit-dicts/should_fail/Roles6.stderr

Roles6.hs:10:6: error: [-Wincoherence (in -Wdefault), -Werror=incoherence]
    • Explicit dictionary application to: ‘Ord Int’
      is not allowed because of possible incoherence:
        There is a global instance for ‘Ord Int’
        Through an ancestor: There is a global instance for ‘Eq Int’
    • In the expression:
        (undefined :: Ord Int => Int -> [Int] -> [Int])
          ((reverseOrd @Int :: Ord Int))
      In an equation for ‘f6’:
          f6
            = (undefined :: Ord Int => Int -> [Int] -> [Int])
                ((reverseOrd @Int :: Ord Int))
